<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>snc_robot</name>
  <version>0.0.1</version>
  <description>ROS2 package for the RMIT Search and Navigation Challenge</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license> <!-- Or Apache 2.0, etc. -->

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend> <!-- Needed for pose transformations -->
  <depend>cv_bridge</depend>
  <depend>find_object_2d</depend> <!-- Depends on its messages -->

  <!-- May need explicit python dependencies if not pulled by others -->
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>